<resources>
    <string name="app_name">Ditto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">ditto_preference</string>
    <string name="user_id_key">user_id</string>
    <string name="null_user_id">no_user_id</string>
    <string name="createAccount">Create an Account</string>
    <string name="signIn">Sign In</string>
    <string name="ditto">Ditto</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="habits">Habits</string>
    <string name="due">DUE</string>
    <string name="profile">Profile</string>
    <string name="add_habit_event">Add a Habit Event</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="account_already">Already Have an Account</string>
    <string name="habit_title">Habit Title</string>
    <string name="comment">Comment</string>
    <string name="tracking">How well am I tracking?</string>
    <string name="days">Days</string>
    <string name="reason">Reason</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="add_location">ADD LOCATION</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="title">Title</string>
    <string name="sample_user">Alejandra</string>
    <string name="sample_habit_description">This is a sample description of a habit</string>
    <string name="indicator">Indicator</string>
    <string name="remove_user">Remove this user</string>
    <string name="accept">Accept Request</string>
    <string name="deny">Deny Request</string>
    <string name="icon">Icon</string>
    <string name="example_application">Example application</string>
    <string name="description">Description</string>
    <string name="send_request">Send Follow Request</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pub">Public</string>
    <string name="priv">Private</string>
</resources>