<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView

        android:id="@+id/fr_user_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="20dp"
        android:src="@drawable/ic_action_profile"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/roundimageview"
        app:strokeColor="#000000"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="328dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fr_user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:paddingRight="20dp"
            android:text="@string/sample_user"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </TextView>


        <ImageView
            android:id="@+id/accept_request"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:clickable="true"
            android:padding="20dp"
            android:src="@drawable/ic_round_check_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deny_request"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:tint="#5FA11A"
            android:contentDescription="@string/accept"
            android:focusable="true">

        </ImageView>

        <ImageView
            android:id="@+id/deny_request"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_marginEnd="10dp"

            android:clickable="true"
            android:padding="20dp"
            android:src="@drawable/ic_round_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:tint="#CF0A0A"
            android:contentDescription="@string/deny"
            android:focusable="true">

        </ImageView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>